--- a/SnakeGameCSharp/SnakeGameCSharp/SnakeGameCSharp.csproj
+++ b/SnakeGameCSharp/SnakeGameCSharp/SnakeGameCSharp.csproj
@@ -72,10 +72,14 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Food.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Label.cs" />
+    <Compile Include="Monster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="SnakeGame.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Game.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
